--- a/trip_report/templates/index.html
+++ b/trip_report/templates/index.html
@@ -450,7 +450,7 @@
 
     <footer class="footer">
         <div class="footer-content">
-            <p>&copy; {{ now().strftime("%Y") }} {{ report_title }}</p>
+            <p>&copy; {{ now().strftime("%Y") }} {{ "Matt Rules" }}</p>
         </div>
     </footer>
 </div>
